# rhetorikos

./: README.md  pyproject.toml
src/rhetorikos/: speak.py
